# fraud-detection-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-and-push.yml  integration-tests.yml  lint-and-test.yml  security-scan.yml
database/: README.md
database/postgresql/migrations/: 001_initial_schema.sql
database/postgresql/stored_procedures/: 001_initial_stored_procedures.sql
database/postgresql/triggers/: 001_initial_triggers.sql
database/timescaledb/migrations/: 001_initial_schema.sql
database/timescaledb/seeds/: README.md  seed_transactions.py
docker/airflow/: Dockerfile
docker/grafana/: Dockerfile
docker/mlflow/: Dockerfile
docker/serving/: Dockerfile
docker/streaming/: Dockerfile
docs/: architecture.md  eda_findings.md
mlops/: README.md
mlops/airflow/dags/: data_quality_check.py  drift_detection_report.py  retrain_fraud_model.py  validate_and_promote_model.py
mlops/airflow/plugins/: operators.py
mlops/evidently/: data_drift.py  drift_policy.py  drift_store.py  model_drift.py  reference_data.py  report_uploader.py
mlops/mlflow/: init_mlflow.py
model/: README.md
model/notebooks/: eda_correlations.ipynb  eda_temporal.ipynb
model/pipeline/: evaluate.py  promote.py  train.py
model/utils/: metrics.py  plots.py  selected_features.py  tuning.py
monitoring/grafana/dashboards/: drift_monitor.json  fraud_alerts.json  model_performance.json  system_health.json
monitoring/grafana/provisioning/: dashboards.yaml  datasources.yaml
monitoring/grafana/provisioning/alerting/: alerts.yaml
monitoring/prometheus/: prometheus.yml
offline_features/: README.md  encoders.py  feature_selection.py  featurizer.py  imbalance_strategies.py
scripts/: deploy.sh  lib.sh  setup.sh  streaming.sh
serving/: README.md
serving/app/: main.py
serving/app/routes/: health.py  predict.py
serving/app/schemas/: __init__.py  prediction.py
serving/app/services/: model_loader.py  prediction_cache.py  prediction_store.py
streaming/: README.md  models.py  publisher.py
streaming/features/: feature_publisher.py  feature_types.py  historical_profile_store.py  main.py  sliding_window_store.py  transaction_consumer.py  transaction_store.py  user_store.py
streaming/inference/: alert_publisher.py  api_client.py  circuit_breaker.py  feature_consumer.py  main.py  prediction_publisher.py
streaming/producer/: generator.py  main.py  transaction_producer.py
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_drift_detection.py  test_feature_pipeline.py  test_serving_pipeline.py  test_training_pipeline.py
tests/load/: conftest.py  locust.conf  locustfile.py  test_kafka_throughput.py  test_timescaledb_benchmarks.py
tests/unit/: conftest.py  test_api.py  test_circuit_breaker.py  test_dags.py  test_drift_logic.py  test_encoders.py  test_feature_selection.py  test_featurizer.py  test_historical_store.py  test_imbalance.py  test_metrics.py  test_model_drift.py  test_model_loader.py  test_prediction_cache.py  test_prediction_store.py  test_publisher.py  test_window_store.py
